# FindMyRent-API

./: .coverage  .env  .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt  test.py
.claude/: settings.local.json
.github/workflows/: main.yml
controllers/: abstract.py  abstract_controller.py  cloudinary.py  cloudinary_controller.py  didit.py  file_upload.py  kyc_controller.py
docs/: ANALYTICS_ENDPOINT.md  PASSWORD_RESET.md  REFRESH-TOKEN.md  USER_ANALYTICS_README.md  terraform-jenkins-integration.md
infrastructure/scripts/: deploy.sh
infrastructure/terraform/: backend.tf  ec2.tf  main.tf  outputs.tf  security_groups.tf  variables.tf  vpc.tf
middleware/: idempotency.py  rate_limiting.py
models/: helpers.py  listings.py  messages.py  notifications.py  security.py  users.py
models/aggregations/: listings.py  users.py
repositories/: __init__.py  admin_repository.py  landlord_repository.py  listing_repository.py  permissions_repository.py
routers/: auth.py  favorites.py  kyc.py  listings.py  notifications.py  users.py
schema/: abstract.py  email.py  file_upload.py  kyc.py  listings.py  security.py  users.py  verification.py
scripts/: migrate_schema.py
security/: helpers.py  refresh_token.py
services/: auth_service.py  email.py  favorites_service.py  kyc.py  kyc_service.py  listings_service.py  notifications_service.py  template.py  user_service.py  validation.py  verification.py
templates/: OUTLOOK_OPTIMIZATION.md  listing_requires_reverification.html  property_accepted_outlook.html  property_needs_verification.html  property_verified.html  verification_email.html
tests/: __init__.py  conftest.py
utils/: logger.py  masking.py
(+22 files in other folders)
